--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,7 +17,7 @@
               </div>
               <div class="footer-about-content">
                 <p>
-                  Healthstack is an online based platform for multiple hospitals. It Provides immediate medical assistance to patients who require emergency treatment. Its Ability to track, monitor, and share a patient's health records between all hospitals. Patients can also see information regarding multiple hospitals and doctors and make appointments online.
+                  Health Access Point is an online based platform for multiple hospitals. It Provides immediate medical assistance to patients who require emergency treatment. Its Ability to track, monitor, and share a patient's health records between all hospitals. Patients can also see information regarding multiple hospitals and doctors and make appointments online.
                 </p>
                 <br>
                 <div class="social-icon">
@@ -69,17 +69,17 @@
                 <div class="footer-address">
                   <span><i class="fas fa-map-marker-alt"></i></span>
                   <p>
-                    Dhanmondi,<br />
-                    Dhaka, Bangladesh
+                    roorkee,<br />
+                    Uttarakhand, India
                   </p>
                 </div>
                 <p>
                   <i class="fas fa-phone-alt"></i>
-                  +880 1234 567890
+                  +91 7217693192
                 </p>
                 <p class="mb-0">
                   <i class="fas fa-envelope"></i>
-                  HealthStack@gmail.com
+                  HealthAccessPoint@gmail.com
                 </p>
               </div>
             </div>
