--- a/templates/navbar_home.html
+++ b/templates/navbar_home.html
@@ -119,7 +119,7 @@
       </div>
       <div class="header-contact-detail">
         <p class="contact-header">Contact</p>
-        <p class="contact-info-header">+880 1234 567890</p>
+        <p class="contact-info-header">+91 7217693192</p>
       </div>
     </li>
 
