--- a/templates/Pharmacy/shop.html
+++ b/templates/Pharmacy/shop.html
@@ -98,7 +98,7 @@
                         <div class="text" style="text-align: center">
                           <h3><a href="{% url 'product-single' pk=medicine.serial_number %}">{{medicine.name}}</a></h3>
                           
-                          <p class="price"><span>{{medicine.price}} BDT</span></p>
+                          <p class="price"><span>{{medicine.price}} Rs.</span></p>
                           <p><a href="{% url 'add-to-cart' pk=medicine.serial_number %}" class="btn btn-primary btn-outline-primary">Add to cart</a></p>
                         </div>
                       </div>
@@ -165,7 +165,7 @@
         <div class="col-lg-6 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-8">
             <h2 class="ftco-heading-2">About Us</h2>
-            <p>Healthstack is an online based platform for multiple hospitals. 
+            <p>Health Access Point is an online based platform for multiple hospitals. 
               It Provides immediate medical assistance to patients who require emergency treatment. 
               Its Ability to track, monitor, and share a patient's health records between all hospitals
               . Patients can also see information regarding multiple hospitals and doctors and make 
@@ -180,8 +180,8 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Dhanmondi, Dhaka, Bangladesh.</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">roorkee, Uttarakhand, India.</span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 9923929210</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span class="text"><span class="__cf_email__"
                         data-cfemail="bed7d0d8d1fec7d1cbccdad1d3dfd7d090ddd1d3">[email&#160;protected]</span></span></a>
                 </li>
