--- a/templates/about-us.html
+++ b/templates/about-us.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html> 
 <html lang="en">
 	
-<!-- doccure/blank-page.html  30 Nov 2019 04:12:20 GMT -->
+<!-- doccure/blank-page.html  30 sept 2024 04:12:20 GMT -->
 <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-    <title>HealthStack</title>
+    <title>Health Access Point</title>
     
     <!-- Favicons -->
     <link type="image/x-icon" href="{% static 'HealthStack-System/images/Normal/favicon.png' %}" rel="icon">
@@ -63,7 +63,7 @@
 						<div class="col-12">
 							<h5>About Us</h5>
 							<p>
-								Healthstack is an internet platform that supports numerous hospitals. It offers urgent medical aid to those in need of emergency care. Its capability of tracking, monitoring, and sharing a patient's health records across all hospitals. Patients can also view information about various hospitals and providers and schedule appointments online.
+								Health Access Point is an internet platform that supports numerous hospitals. It offers urgent medical aid to those in need of emergency care. Its capability of tracking, monitoring, and sharing a patient's health records across all hospitals. Patients can also view information about various hospitals and providers and schedule appointments online.
 							</p>
 						</div>
 					</div>
