--- a/templates/hospital-doctor-list.html
+++ b/templates/hospital-doctor-list.html
@@ -220,7 +220,7 @@
                           </li>
                           <li>
                             <i class="far fa-money-bill-alt"></i>
-                            {{doctor.consultation_fee}} BDT
+                            {{doctor.consultation_fee}} INR
                             <i
                               class="fas fa-info-circle"
                               data-toggle="tooltip"
